--- a/Predict_Fish_Weight.Rmd
+++ b/Predict_Fish_Weight.Rmd
@@ -20,8 +20,16 @@ require(tidyverse)
 
 # Predicting Fish Weight
 
+```{r}
+Fish <-read.csv(file="Fish.csv",header=TRUE)
+```
 
 ## Perch
+
+```{r}
+Perch <- filter(fish, Species=="Perch")
+```
+
 
 ### Best Models
 
