--- a/Predict_Fish_Weight.Rmd
+++ b/Predict_Fish_Weight.Rmd
@@ -28,14 +28,36 @@ Fish <-read.csv(file="Fish.csv",header=TRUE)
 
 ```{r}
 Perch <- filter(fish, Species=="Perch")
+Perch <- select(Perch, -(Species))
 ```
 
 
 ### Best Models
 
+```{r}
+library(leaps)
+regsubsets.out <-
+    regsubsets(Weight ~ .,
+               data = Perch,
+               nbest = 1,       # 1 best model for each number of predictors
+               nvmax = NULL,    # NULL for no limit on number of variables
+               force.in = NULL, force.out = NULL,
+               method = "exhaustive")
+
+summary.out <- summary(regsubsets.out)
+as.data.frame(summary.out$outmat)
+library(car)
+subsets(regsubsets.out,statistic="adjr2",legend="topright",main="Adjusted R^2")
+```
+
 ### Best Two regressor model
 
+```{r}
+best.model <- lm(Weight~Height+Width,data=Perch)
+summary(best.model)
+``` 
 
+The best model and the best Two regressor model is the same answer. 
 ## Pike
 
 ### Best Models
