fixed command to follow the rubric and edited the desc.

--- a/Predict_Fish_Weight.Rmd
+++ b/Predict_Fish_Weight.Rmd
@@ -57,15 +57,15 @@ best.model <- lm(Weight~Height+Width,data=Perch)
 summary(best.model)
 ``` 
 
-The best model and the best Two regressor model is the same answer.  
+The best model and the best Two regressor model is the same answer. That is why in the fist command we get the height and width at the top of the graph.    
 
 ```{r}
 best_Perch_Model <- lm(Weight~Height+Width,data=Perch)
 five_element_perch_model <- lm(Weight~.,data=Perch)
-anova(best_Perch_Model, one_perch_model)
+anova(best_Perch_Model, five_element_perch_model)
 ```
 
-This analysis of Variance represents how the Two element model is most likely to be significant. That is why there is not much diffrence when comparing it agains a five element model 
+This analysis of Variance represents how the Two element model is most likely to be significant. That is why there is not much difference when comparing it against a five element model.      
 
 ## Pike
 
