entered coomand for best model

--- a/Predict_Fish_Weight.Rmd
+++ b/Predict_Fish_Weight.Rmd
@@ -68,11 +68,27 @@ anova(best_Perch_Model, five_element_perch_model)
 This analysis of Variance represents how the Two element model is most likely to be significant. That is why there is not much difference when comparing it against a five element model.      
 
 ## Pike
+```{r}
+Pike <- filter(Fish, Species=="Pike")
+Pike <- select(Pike, -(Species))
+```
 
 ### Best Models
+```{r}
+library(leaps)
+regsubsets.out <-
+    regsubsets(Weight ~ .,
+               data = Pike,
+               nbest = 1,       # 1 best model for each number of predictors
+               nvmax = NULL,    # NULL for no limit on number of variables
+               force.in = NULL, force.out = NULL,
+               method = "exhaustive")
 
-
-
+summary.out <- summary(regsubsets.out)
+as.data.frame(summary.out$outmat)
+library(car)
+subsets(regsubsets.out,statistic="adjr2",legend="topleft",main="Adjusted R^2")
+```
 
 ### Best Two regressor model
 
